# blackjack-plusplus

./: CMakeLists.txt  CMakePresets.json  README.md  playRound.cpp  studyRound.cpp
engine/: CMakeLists.txt  card.cpp  card.hpp  engine.hpp  hand.cpp  player.cpp  round.cpp  shoe.cpp  strategies.cpp  table.cpp
engine/test/: CMakeLists.txt  catch_amalgamated.hpp  main.cpp  main.hpp
examples/: CMakeLists.txt  playRound.cpp  useBindings.py
python/: engine.cpp
src/: CMakeLists.txt  engine.hpp  hand.cpp  round.cpp  strategies.cpp  table.cpp
tests/: CMakeLists.txt
